ecmascript/parser/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/accessibilityModifiers/input.ts.stderr
error: Unexpected token `privateProperty`. Expected * for generator, private key, identifier or async
  --> $DIR/tests/typescript-errors/tsc/classes/propertyMemberDeclarations/accessibilityModifiers/input.ts:23:20
   |
23 |     static private privateProperty;
   |                    ^^^^^^^^^^^^^^^

